--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,11 @@ jobs:
          name: my-artifact
          path: test.txt
          
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/my*
+          tag: ${{ github.ref }}
+          overwrite: true
+          file_glob: true
