--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,4 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: test.txt
           tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+          asset_name: test.txt
